--- a/src/components/CSS/style.css
+++ b/src/components/CSS/style.css
@@ -202,9 +202,9 @@ input[type="text"] {
     margin-bottom: 5px;
   }
 
-  hr {
+  /* hr {
     margin: 10px 0;
-  }
+  } */
 
   .custom-btn {
     margin-right: 5px;
