--- a/src/components/CSS/style.css
+++ b/src/components/CSS/style.css
@@ -69,6 +69,7 @@
 }
 
 .logcol {
+  width: 100%;
     display: flex;
     justify-content: center;
 }
@@ -235,6 +236,35 @@ input[type="text"] {
 }
 
 
-.form-control{
+/* Carousel.css */
+ 
+.full-width-carousel {
   width: 100%;
+  margin: 0 auto;
 }
+
+
+
+.full-width-slide {
+  width: 100vw;
+  /* height: 60vh; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.full-width-slide{
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
+
+.slide-image {
+  width: 100%;
+  height: auto;
+}
+
+.slide {
+  padding: 0 5px; /* Adjust this value to set the gap between slides */
+}
+
